[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d20-mcp"
version = "0.1.0"
description = "MCP server for all of your dice needs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Said Surucu" }
]
dependencies = [
    "fastmcp>=0.2.0",
    "d20>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/saidsurucu/d20-mcp"
Repository = "https://github.com/saidsurucu/d20-mcp"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
d20-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
